tests/ui/borrowck/issue-64453.stderr
error: `Arguments::<'a>::new_const` is not yet stable as a const fn
  --> $SRC_DIR/alloc/src/macros.rs:LL:COL
   |
   = note: in this expansion of `format!` (#1)
  ::: $SRC_DIR/alloc/src/macros.rs:LL:COL
   |
   = note: in this macro invocation (#2)
   |
  ::: $DIR/issue-64453.rs:4:31
   |
LL | static settings_dir: String = format!("");
   |                               ----------- in this macro invocation (#1)
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `$crate::__export::format_args!` (#2)
   |
   = help: add `#![feature(const_fmt_arguments_new)]` to the crate attributes to enable

error[E0015]: cannot call non-const fn `format` in statics
  --> $SRC_DIR/alloc/src/macros.rs:LL:COL
   |
   = note: in this expansion of `format!`
   |
  ::: $DIR/issue-64453.rs:4:31
   |
LL | static settings_dir: String = format!("");
   |                               ----------- in this macro invocation
   |
   = note: calls in statics are limited to constant functions, tuple structs and tuple variants
   = note: consider wrapping this expression in `Lazy::new(|| ...)` from the `once_cell` crate: https://crates.io/crates/once_cell

error[E0507]: cannot move out of static item `settings_dir`
  --> $DIR/issue-64453.rs:14:37
   |
LL |     let settings_data = from_string(settings_dir);
   |                                     ^^^^^^^^^^^^ move occurs because `settings_dir` has type `String`, which does not implement the `Copy` trait

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0015, E0507.
For more information about an error, try `rustc --explain E0015`.
